5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1635_2445.log
== TEST (2019-04-14 21:55:54) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor + 160) / 5

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:56:00) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor + 160) / 5

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.237566
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:04:22) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:04:24) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.199184
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:04:24) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:04:26) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.160751
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:28:58) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.159554
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:28:59) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:29:01) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.157938
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 05:39:01) 
-- CODE:
escala =  input("c ou f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (9*valor/5 + 32)

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.236782
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 05:40:56) 
-- CODE:
escala =  input("c/f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.138697
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 05:40:57) 
-- CODE:
escala =  input("c/f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 05:41:00) 
-- CODE:
escala =  input("c/f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.130129
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 06:08:12) 
-- CODE:
escala =  input("c/f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.138771
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 06:10:16) 
-- CODE:
escala = input("c/f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.210629
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 06:10:21) 
-- CODE:
escala = input("c/f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.113259
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 06:10:22) 
-- CODE:
escala = input("c/f: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:45:41) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.239174
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:45:42) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.203187
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:45:43) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.110218
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:45:43) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.175465
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:45:43) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.0756361
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2445/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:16) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.14322
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:46:17) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:22) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.178359
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:31) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.140852
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:33) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.176914
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:34) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.106786
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:34) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "f"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.132997
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:50) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.180304
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:51) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.154674
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:51) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.172921
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
-17.78
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:51) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.124747
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:52) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.204887
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:52) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.178153
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:52) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.180046
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:52) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.223917
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:53) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.213041
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
-17.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:53) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.381366
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2445/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:53) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.225553
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:53) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.223318
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2445/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:53) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.189265
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2445/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:56) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.206656
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:56) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.571646
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:56) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.728744
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:56) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.726719
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:56) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.680859
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
-17.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:56) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.782898
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
-17.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:57) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.13877
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:58) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.245071
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:58) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.461111
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:58) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.598384
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:58) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.633822
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:58) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.714562
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
-17.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:59) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.428608
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:59) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.407609
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:59) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.485328
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:59) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.600649
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:59) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.796306
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:46:59) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.861662
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
-17.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
160.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:47:00) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.136388
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2445/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:47:00) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.138752
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
C/F: valor: 160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
C/F: valor: -17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:47:00) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.371013
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
C/F: valor: 160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
C/F: valor: 160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:47:00) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.50969
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
C/F: valor: 160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
C/F: valor: -17.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:47:00) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala.upper() == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.507745
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
C/F: valor: 160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
C/F: valor: -17.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:52:24) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.27778
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:25) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:34) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:35) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:35) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:35) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:35) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:35) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:36) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:36) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:36) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:36) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:36) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:36) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:36) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:37) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:52:37) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:11:27) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:11:27) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:11:29) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:11:29) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.201342
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
C/F: valor: 160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
C/F: valor: 160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
C/F: valor: -17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:11:30) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.139495
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:30:24) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:31:50) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = 

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- ERROR:
File "XXXX", line 5
    cf = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:31:53) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = 

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- ERROR:
File "XXXX", line 5
    cf = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:33:17) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:33:19) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.14371
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:16:21) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- EXECUTION TIME:
0.219224
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:16:22) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

fc = (5/9)*(valor - 32)
cf = (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(fc, 2))
else:
	print(round(cf, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:16:46) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

c = (5/9)*(valor - 32)
f= (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(c, 2))
else:
	print(round(f, 2))
-- EXECUTION TIME:
0.210119
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:16:47) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

c = (5/9)*(valor - 32)
f= (5*(valor - 32)) / 9

if (escala == "F"):
	print(round(c, 2))
else:
	print(round(f, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:18:29) 
-- CODE:
escala = input("C/F: ")
valor = float(input("valor: "))

c = (5/9)*(valor - 32)
f= (5*(valor - 32)) / 9

if (escala == "C"):
	print(round(c, 2))
else:
	print(round(f, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:32) 
-- CODE:
escala = input("C/F: ")

c = (5/9)*(valor - 32)
f= (5*(valor - 32)) / 9

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.199009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = (5/9)*(valor - 32)
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:32) 
-- CODE:
escala = input("C/F: ")

c = (5/9)*(valor - 32)
f= (5*(valor - 32)) / 9

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = (5/9)*(valor - 32)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:35) 
-- CODE:
escala = input("C/F: ")

c = (5/9)*(valor - 32)
f= (5*(valor - 32)) / 9

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.143304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = (5/9)*(valor - 32)
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:44) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- OUTPUT:
97.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:46) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.156891
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
32.56
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:47) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- OUTPUT:
97.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:47) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- OUTPUT:
97.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:47) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.139918
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
C/F: temperatura: 32.56
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
C/F: temperatura: 33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:32:48) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- OUTPUT:
97.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.263192
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
97.8
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.246074
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
32.56
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.351475
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
32.56
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
33.8
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.468006
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
33.8
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
97.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.689891
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
32.56
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
33.8
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.324471
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
33.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.417379
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2445/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:48) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.152552
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
32.56
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:49) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.142894
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
C/F: temperatura: 97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
C/F: temperatura: 32.56
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
C/F: temperatura: 33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:51:49) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- OUTPUT:
97.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:50) 
-- CODE:
escala = input("C/F: ")

if escala == "C":
	t = float(input("temperatura: "))
	f = ((t + 9) / 5) + 32
	print(round(f, 2))
else:
	t = float(input("temperatura: "))
	c = ((t - 32) + 5) / 9
	print(round(c, 2))
-- EXECUTION TIME:
0.12316
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
97.8
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
32.56
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
33.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
